# stonks-bot

./: LICENSE  README.md
bot/: .gitignore  api_client_middleware.py  api_models.py  app.py  app_container.py  bot.py  bot_callback_funcs.py  bot_handlers_callbacks.py  bot_handlers_db_updates.py  bot_handlers_on_msg.py  bot_helpers.py  config.py  creds.py  custom_filters.py  data_models.py  data_provider.py  data_provider_helpers.py  data_provider_protocols.py  database.py  database_funcs.py  db.py  db_errors.py  db_funcs.py  db_helpers.py  db_listener_supabase.py  db_supabase.py  fin_instruments_dto.py  formatting.py  main.py  models.py  models_alpha_vantage.py  provider_alpha_vantage.py  pyproject.toml  stocks.py  stocks_alpha_vantage.py  supabase_funcs.py  test_wallstreet.py  tg_bot.py  user_setting.py  user_settings.py
bot/db/: errors.py  helpers.py  supabase.py
tg-stonks/: .gitignore  README.md  pyproject.toml
tg-stonks-bot/: .gitignore  app_container.py  bot_handlers_callbacks.py  bot_handlers_db_updates.py  bot_handlers_on_msg.py  bot_helpers.py  config.py  creds.py  main.py  models.py  models_alpha_vantage.py  provider_alpha_vantage.py  pyproject.toml
tg-stonks-bot/database/: helpers.py  impl_supabase.py
tg-stonks-bot/src/tg_stonks/: config.py  main.py
tg-stonks-bot/src/tg_stonks/bot/: app_container.py  formatting.py  handlers_callbacks.py  handlers_db_updates.py  handlers_messages.py
tg-stonks-bot/src/tg_stonks/database/: helpers.py  user_settings.py
tg-stonks-bot/src/tg_stonks/impl/: alpha_vantage_provider.py  supabase_database.py  supabase_listener.py
tg-stonks-bot/src/tg_stonks/providers/: models.py  protocols.py
tg-stonks-bot/src/tg_stonks_bot/: formatting.py  supabase_listener.py
tg-stonks-bot/src/tg_stonks_bot/data_providers/: protocols.py  provider_type.py
tg-stonks-bot/src/tg_stonks_bot/database/: helpers.py  protocols.py  user_settings.py
tg-stonks-bot/src/tg_stonks_bot/database_listener/: protocol.py
tg-stonks-bot/tg_stonks_bot/: alpha_vantage_models.py  alpha_vantage_provider.py  app_container.py  bot_handlers_db_updates.py  bot_handlers_on_msg.py  bot_helpers.py  creds.py  supabase_database.py
tg-stonks-bot/tg_stonks_bot/data_providers/: api_client_middleware.py  helpers.py
tg-stonks-bot/tg_stonks_bot/database/: entity_models.py
tg-stonks/src/tg_stonks/: config.py  main.py
tg-stonks/src/tg_stonks/bot/: app_container.py  formatting.py  handlers_callbacks.py  handlers_db_updates.py  handlers_messages.py  helpers.py
tg-stonks/src/tg_stonks/database/: entity_models.py  errors.py  helpers.py  protocols.py  user_settings.py
tg-stonks/src/tg_stonks/impl/: alpha_vantage_models.py  alpha_vantage_provider.py  supabase_database.py  supabase_listener.py
tg-stonks/src/tg_stonks/utils/: creds.py  (+1 more)
tg-stonks/tests/: test_db.py  test_models.py  test_provider_av.py  test_users_settings.py
(+3 files in other folders)
