
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vic Khov", email = "victorkhovtko@gmail.com"},
]
dependencies = [
    "pyrogram>=2.0.106",
    "toml>=0.10.2",
    "tinkoff-investments>=0.2.0b58",
    "supabase>=1.0.3",
    "alpha-vantage>=2.3.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
plotting = [
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
]
tools = [
    "mypy>=1.4.1",
]
