[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vic Khov", email = "victorkhovtko@gmail.com"},
]
dependencies = [
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
    "supabase>=1.0.4",
    "realtime==1.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.1.1",
    "emoji>=2.7.0",
    "returns>=0.21.0",
    "alpha-vantage>=2.3.1",
    "wallstreet>=0.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
tools = [
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
plotting = [
    "pandas>=2.0.3",
    "matplotlib==3.7.2",
]

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]